# simple-stt

./: .env.example  .gitignore  INSTALL.md  README.md  audio_recorder.py  clipboard_manager.py  config.py  config.yaml  hyprland-keybind.conf  llm_refiner.py  main.py  pyproject.toml  requirements.txt  stt_processor.py  ui_overlay.py
src/stt/: __init__.py  cli.py
src/stt/audio/: __init__.py  recorder.py
src/stt/config/: __init__.py  manager.py
src/stt/services/: __init__.py  clipboard.py  orchestrator.py
src/stt/speech/: __init__.py  enhancer.py  transcriber.py
src/stt/ui/: __init__.py  overlay.py
